cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_169.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bio/bss_null.c:54: error: DEAD_STORE
  The value written to &ret (type long) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bio/bss_null.c:54:5: Write of unused value
52.   static long null_ctrl(BIO *b, int cmd, long num, void *ptr)
53.   {
54.       long ret = 1;
          ^
55.   
56.       switch (cmd) {
